server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  namespace: blob-api
  labels:
    app: node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: hemanthrasabhathula/best-lines-of-books-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
